tests/kyverno/tenant-scheduling/non-tenant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: default-pod
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx:latest
