tests/kyverno/tenant-scheduling/tenant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: tenant-alpha
spec:
  containers:
    - name: nginx
      image: nginx:latest
